# pureapi

./: .editorconfig  .gitignore  LICENSE  Pipfile  README.md  env.dist  filter_changes_by_uuid.py  pyproject.toml  requirements.txt  setup.py
docs/: openapi-api.elsevierpure.com-0.1.yaml  openapi-experts.umn.edu-2023-08-02.json  openapi-experts.umn.edu-2023-08-02.yaml  openapi-experts.umn.edu.json  openapi-experts.umn.edu.yaml  pure-community-slack-api-chat-2022-10-24.md  pureapi-524-schema-pp.json  rw-api-notes.md
docs/schemas.old/520/: swagger.json
docs/schemas.old/522/: swagger.json
investigations/changes_resumption_tokens/: changes_tokens_2023_10_27.txt  changes_tokens_2023_10_28.txt  changes_tokens_2023_10_30.txt  changes_tokens_2023_10_31.txt  get_changes_tokens.py  problem-2022-07-19.jsonl  problem-2022-07-20.jsonl  problem_resumption_token.py
investigations/changes_with_relations/: change-e1ecd377-583c-4424-838a-d804289da913.json  change-f02f5263-0eff-4832-ae82-9ab743e93ff3.json  get_changes_with_relation_changes.py
investigations/filter_content_by_api_key/: changes_filtered_by_api_key.py
pureapi/: __init__.py  client.py  common.py  exceptions.py  response.py  xmlparser.py
pureapi/schemas/516/: swagger.json
pureapi/schemas/518/: swagger.json
pureapi/schemas/519/: swagger.json
pureapi/schemas/521/: swagger.json
pureapi/schemas/523/: swagger.json
schemas/517/: swagger.json
tests/: changes_including_zero_counts.py  conftest.py  test_client.py  test_common.py  test_pureapi.py  test_pureapi_env_vars.py  test_response.py
(+41 files in other folders)
